websocket server working, starting RTC handshake

--- a/server/index.html
+++ b/server/index.html
@@ -7,6 +7,7 @@
 	<title>web rtc serverless</title>
 </head>
 <body>
+	<script src="static/adapter.js"></script>
 	<script src="static/network.js"></script>
 </body>
 </html>
