client : board's size/draw hoshis/tengen

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 
     </head>
     <body>
-        <canvas id="board_canvas" height ="421" width="421">
+        <canvas id="board_canvas">
 
         </canvas>
     </body>
