signaling over websocket kinda worrking

--- a/server/index.html
+++ b/server/index.html
@@ -7,6 +7,9 @@
 	<title>web rtc serverless</title>
 </head>
 <body>
+	<button id="foo">foo</button>
+	<button id="bar">bar</button>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="static/log.js"></script>
 	<script src="static/adapter.js"></script>
 	<script src="static/network.js"></script>
