--- a/server/index.html
+++ b/server/index.html
@@ -12,6 +12,6 @@
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="static/log.js"></script>
 	<script src="static/adapter.js"></script>
-	<script src="static/network.js"></script>
+	<script src="static/network2.js"></script>
 </body>
 </html>
