--- a/server/index.html
+++ b/server/index.html
@@ -7,11 +7,12 @@
 	<title>web rtc serverless</title>
 </head>
 <body>
-	<button id="foo">foo</button>
-	<button id="bar">bar</button>
+	<button id="start">start</button>
+     <input type="text" id="msg" />
+	<button id="send">send</button>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="static/log.js"></script>
 	<script src="static/adapter.js"></script>
-	<script src="static/network2.js"></script>
+	<script src="static/network.js"></script>
 </body>
 </html>
