websocket and webrtc in object now

--- a/server/index.html
+++ b/server/index.html
@@ -13,6 +13,7 @@
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="static/log.js"></script>
 	<script src="static/adapter.js"></script>
-	<script src="static/network.js"></script>
+    <script src="static/socket.js"></script>
+    <script src="static/network.js"></script>
 </body>
 </html>
