--- a/server/index.html
+++ b/server/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>web rtc serverless</title>
+	<title>web rtc</title>
 </head>
 <body>
-	<button id="start">start</button>
+	<button id="start">new game</button>
      <input type="text" id="msg" />
 	<button id="send">send</button>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
