start url joining

--- a/server/index.html
+++ b/server/index.html
@@ -7,7 +7,7 @@
 	<title>web rtc</title>
 </head>
 <body>
-	<button id="start">new game</button>
+	<button id="start">new</button>
      <input type="text" id="msg" />
 	<button id="send">send</button>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
@@ -15,5 +15,6 @@
 	<script src="static/adapter.js"></script>
     <script src="static/socket.js"></script>
     <script src="static/network.js"></script>
+    <script src="static/baduk.js"></script>
 </body>
 </html>
