--- a/poubellesoon.html
+++ b/poubellesoon.html
@@ -11,10 +11,12 @@
         <script type="text/javascript" src="static/poubelle.js"></script>
     </head>
     <body>
+    <!--
         <canvas id="board_canvas">
         </canvas>
-        <canvas id="testyo">
-        </canvas>
+        -->
+        <div>
 
+        </div>
     </body>
 </html>
