fix newline for canvas

--- a/poubellesoon.html
+++ b/poubellesoon.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="static/poubelle.js"></script>
     </head>
     <body>
+        <div id="board"></div>
     <!--
         <canvas id="board_canvas">
         </canvas>
