--- a/poubellesoon.html
+++ b/poubellesoon.html
@@ -10,14 +10,10 @@
         <script src="static/game.js"></script>
         <script type="text/javascript" src="static/poubelle.js"></script>
     </head>
-    <body>
-        <div id="board"></div>
-    <!--
+        <body>
         <canvas id="board_canvas">
         </canvas>
-        -->
-        <div>
-
+        <div id="board">
         </div>
     </body>
 </html>
